--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/portfolio/tooth.svg" alt=""></div>
+                            <div class="pic"><img src="assets/img/equipe/lois.jpeg" alt=""></div>
                             <h4>Luís Reis</h4>
-                            <span>Chief Executive Officer</span>
+                            <span>Blá blá blá</span>
                             <div class="social">
                               <a href="https://www.instagram.com/reisluisz/"><i class="fab fa-instagram"></i></a>
                               <a href="https://github.com/luisnreis"><i class="fab fa-github"></i></a>
@@ -199,9 +199,9 @@
               
                         <div class="col-lg-3 col-md-6">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/portfolio/castle.svg" alt=""></div>
+                            <div class="pic"><img src="assets/img/equipe/rafael.jpeg" alt=""></div>
                             <h4>Rafael Lima</h4>
-                            <span>Product Manager</span>
+                            <span>Blá blá blá</span>
                             <div class="social">
                               <a href=""><i class="fab fa-github"></i></a>
                               <a href="wa.me/5511979859117"><i class="fab fa-whatsapp"></i></a>
@@ -211,9 +211,9 @@
               
                         <div class="col-lg-3 col-md-6">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/portfolio/armor.svg" alt=""></div>
+                            <div class="pic"><img src="assets/img/equipe/yvri.jpeg" alt=""></div>
                             <h4>Yuri Candido</h4>
-                            <span>Accountant</span>
+                            <span>Blá blá blá</span>
                             <div class="social">
                               <a href="https://github.com/projects-yuri"><i class="fab fa-github"></i></a>
                               <a href="wa.me/5511996338103"><i class="fab fa-whatsapp"></i></a>
@@ -925,7 +925,7 @@
                                     <p class="p-nocap">Porém nada respondeu.</p>
                                     <p class="p-nocap">— Vou interpretar esse silêncio como um sim. — Caçoou o cavaleiro
                                         escarlate.</p>
-                                    <p class="p-nocap">Preparados com as lanças na posição começaram a avançar sem
+                                    <p class="p-nocaImage too small. Images must be at least 300x300p">Preparados com as lanças na posição começaram a avançar sem
                                         parar, e o público começou a se exaltar. Avançando cada vez mais rápido
                                         em direção com o único objetivo de derrubar o seu adversário. Em alta
                                         velocidade e cada vez mais rápido, em questão de segundos os cavaleiros
