--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/ghost.svg" alt="Professora Cíntia Maria de Araújo Pinho" />
+                            <img class="img-fluid" src="assets/teacher/cintia.jpg" alt="Professora Cíntia Maria de Araújo Pinho" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -104,7 +104,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/heart.svg" alt="Professora Bárbara Tomazia Alexandre do Nascimento" />
+                            <img class="img-fluid" src="assets/teacher/barbara.jpg" alt="Professora Bárbara Tomazia Alexandre do Nascimento" />
                         </div>
                     </div>
                 </div>
