Ajustes na parte sobre.
Ajustes na parte sobre nós, nos links que vão até as redes sociais e descrição.

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
               <div class="carousel-item">
                 <img src="assets/img/portfolio/ghost.png" class="d-block w-100"> 
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>CLAMEM AO REI</h5>
-                  <p>Fantasma de Balaclava</p>
+                  <h5>...</h5>
+                  <p>sdasjca</p>
                 </div>
               </div>
             </div>
@@ -233,44 +233,45 @@
                 <section id="." class="section-bg">
                     <div class="container" data-aos="fade-up">
                       <div class="section-header">
-                        <h3 class="section-title">Sobre nós</h3>
+                        <h3 class="section-title">Sessão falando os criadores desse projeto :)</h3>
+                        <br>
                         <span class="section-divider"></span>
-                        <p class="section-description">Sessão falando os criadores desse projeto :)</p>
+                        <p class="section-description"></p>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6">
+                    <div class="row justify-content-center">
+                        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/equipe/lois.jpeg" alt=""></div>
+                            <div class="pic"><img class="equipe" src="assets/img/equipe/lois.jpeg" alt=""></div>
                             <h4>Luís Reis</h4>
-                            <span>Blá blá blá</span>
+                            <span>Olá, me chamo Luís Reis do 1°C :D</span>
                             <div class="social">
-                              <a href="https://www.instagram.com/reisluisz/"><i class="fab fa-instagram"></i></a>
-                              <a href="https://github.com/luisnreis"><i class="fab fa-github"></i></a>
-                              <a href="wa.me/5511945030407"><i class="fab fa-whatsapp"></i></a>
+                              <a href="https://www.instagram.com/reisluisz/" target="_blank"><i class="fab fa-instagram"></i></a>
+                              <a href="https://github.com/luisnreis" target="_blank"><i class="fab fa-github"></i></a>
+                              <a href="https://wa.me/5511945030407" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
               
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/equipe/rafael.jpeg" alt=""></div>
+                            <div class="pic"><img class="equipe" src="assets/img/equipe/rafael.jpeg" alt=""></div>
                             <h4>Rafael Lima</h4>
                             <span>Blá blá blá</span>
                             <div class="social">
-                              <a href=""><i class="fab fa-github"></i></a>
-                              <a href="wa.me/5511979859117"><i class="fab fa-whatsapp"></i></a>
+                              <a href=""><i class="fab fa-github" target="_blank"></i></a>
+                              <a href="https://wa.me/5511979859117" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
               
-                        <div class="col-lg-3 col-md-6">
+                        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                           <div class="member">
-                            <div class="pic"><img src="assets/img/equipe/yvri.jpeg" alt=""></div>
+                            <div class="pic"><img class="equipe" src="assets/img/equipe/yvri.jpeg" alt=""></div>
                             <h4>Yuri Candido</h4>
                             <span>Blá blá blá</span>
                             <div class="social">
-                              <a href="https://github.com/projects-yuri"><i class="fab fa-github"></i></a>
-                              <a href="wa.me/5511996338103"><i class="fab fa-whatsapp"></i></a>
+                              <a href="https://github.com/projects-yuri" target="_blank"><i class="fab fa-github"></i></a>
+                              <a href="https://wa.me/5511996338103" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             </div>
                           </div>
                         </div>
