--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <!-- Footer Location-->
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xl-7">
-                            <form method="POST" action="#">
+                            <form action="https://formsubmit.co/github.livreto@gmail.com" method="POST">
                                 <!-- Name input-->
                                 <br>
                                 <div class="form-floating mb-3">
