--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                                         <span>Número de Celular</span>
                                     </div>
                                     <div class="inputBox w100">
-                                        <textarea required></textarea>
+                                        <textarea name="message" required></textarea>
                                         <span>Escreva sua mensagem aqui.</span>
                                     </div>
                                     <div class="inputBox w100">
