--- a/index.html
+++ b/index.html
@@ -314,15 +314,16 @@
                         <form action="https://formsubmit.co/github.livreto@gmail.com" method="POST">
                                 <div class="formBox">
                                     <div class="inputBox w50">
-                                        <input type="text" name="name" required>
+                                        <input type="text" name="name" required />
+                                        <input type="hidden" name="_captcha" value="false" />
                                         <span>Nome</span>
                                     </div>
                                     <div class="inputBox w50">
-                                        <input type="email" name="email" required>
+                                        <input type="email" name="email" required />
                                         <span>Endereço de E-mail</span>
                                     </div>
                                     <div class="inputBox w50">
-                                        <input type="text" name="phone" required>
+                                        <input type="text" name="phone" required />
                                         <span>Número de Celular</span>
                                     </div>
                                     <div class="inputBox w100">
@@ -330,7 +331,7 @@
                                         <span>Escreva sua mensagem aqui.</span>
                                     </div>
                                     <div class="inputBox w100">
-                                        <input type="submit" value="Enviar">
+                                        <input type="submit" value="Enviar" />
                                     </div>
                                 </div>
                             </form>
