--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#sobreproj">Sobre</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#prof">Professores</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contos">Contos</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contato">Contato</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#criadores">Criadores</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contact.html">Contato</a></li>
                     </ul>
                 </div>
             </div>
@@ -219,7 +220,7 @@
             </div>
         </section>
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="sobre">
+        <section class="page-section bg-nah text-white mb-0" id="criadores">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">Sobre</h2>
@@ -280,65 +281,6 @@
                     </div>
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="footer text-center" id="contato">
-            <section class="secform">
-                <div class="contai">
-                    <div class="contactInfo">
-                        <div>
-                            <h2>Info de Contato</h2>
-                            <ul class="info">
-                                <li>
-                                    <span><img src="assets/contactassets/location_on_black_48dp.svg"></span>
-                                    <span class="noc">R. Bélgica, 88 - Jardim Alvorada
-                                          Ribeirão Pires, SP
-                                          09402-060</span>
-                                </li>
-                                <li>
-                                    <span><img src="assets/contactassets/email_black_48dp.svg"></span>
-                                    <span>github.livreto@gmail.com</span>
-                                </li>
-                                <li>
-                                    <span><img src="assets/contactassets/call_black_48dp.svg"></span>
-                                    <span>(11) 4825-4470</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <ul class="sci">
-                            <li><a href="https://www.facebook.com/etecrpmcm/"><img src="assets/contactassets/face.png"></a></li>
-                            <li><a href="https://instagram.com/etecmcm?utm_medium=copy_link"><img src="assets/contactassets/insta.png"></a></li>
-                        </ul>
-                    </div>
-                    <div class="contactForm">
-                        <h2 class="tit">Envie uma mensagem</h2>
-                        <form action="https://formsubmit.co/github.livreto@gmail.com" method="POST">
-                                <div class="formBox">
-                                    <div class="inputBox w50">
-                                        <input type="text" name="name" required />
-                                        <input type="hidden" name="_captcha" value="false" />
-                                        <span>Nome</span>
-                                    </div>
-                                    <div class="inputBox w50">
-                                        <input type="email" name="email" required />
-                                        <span>Endereço de E-mail</span>
-                                    </div>
-                                    <div class="inputBox w50">
-                                        <input type="text" name="phone" required />
-                                        <span>Número de Celular</span>
-                                    </div>
-                                    <div class="inputBox w100">
-                                        <textarea name="message" required></textarea>
-                                        <span>Escreva sua mensagem aqui.</span>
-                                    </div>
-                                    <div class="inputBox w100">
-                                        <input type="submit" value="Enviar" />
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                </div>
-            </section>
-        </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
             <div class="container"><small>Copyright &copy; Eventuais Contos</small></div>
