--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,8 @@
                         <div class="formBox">
                             <div class="inputBox w50">
                                 <input type="text" name="name" required />
-                                <input type="hidden" name="_captcha" value="false" />
+                                <input type="hidden" name="_next" value="https://gitlivreto.github.io/GitLivro/thankyou.html">
+                                <input type="hidden" name="_template" value="box">
                                 <span>Nome</span>
                             </div>
                             <div class="inputBox w50">
